--- a/OnlineVegMarket/src/main/resources/application.properties
+++ b/OnlineVegMarket/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=8081
 
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+# MySQL settings
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/onlinemarket
+spring.datasource.username=root
+spring.datasource.password=root
